<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/profile" />



        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/baseline_view_list_24"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_myCart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/my_notification" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/baseline_location_on_24"
            android:title="@string/my_location" />
    </group>
</menu>